--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+streamlit>=1.25.0
+pandas>=1.5.0
 numpy == 2.1.0
-streamlit
-pandas
-scikit-learn
-matplotlib
-seaborn
-plotly
-xgboost
-shap
-openpyxl
+scikit-learn>=1.1.0
+xgboost>=1.7.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+plotly>=5.6.0
+openpyxl>=3.0.0
+umap-learn>=0.5.3
+shap>=0.41.0,<0.44.0
